--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,66 +1,95 @@
 name: Deploy website to GitHub Pages
 
+env:
+  WC_HUGO_VERSION: '0.149.0'   # or the version in your hugoblox.yaml
+
 on:
-  # Trigger the workflow every time you push to the `main` branch
   push:
-    branches: ['main']
-  # Allows you to run this workflow manually from the Actions tab on GitHub
+    branches: ["main"]
   workflow_dispatch:
 
-# Provide permission to clone the repo and deploy it to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
 concurrency:
-  group: 'pages'
+  group: "pages"
   cancel-in-progress: false
 
 jobs:
-  # Check deployment configuration
-  config:
-    if: github.repository_owner != 'HugoBlox'
-    runs-on: ubuntu-latest
-    outputs:
-      deploy-host: ${{ steps.check.outputs.host }}
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-      with:
-        sparse-checkout: hugoblox.yaml
-        sparse-checkout-cone-mode: false
-
-    - name: Check deploy host
-      id: check
-      run: |
-        # Read deploy.host from hugoblox.yaml, default to github-pages
-        HOST=$(grep -A5 "^deploy:" hugoblox.yaml 2>/dev/null | grep "host:" | awk '{print $2}' | tr -d "'\""" || echo "github-pages")
-        HOST=${HOST:-github-pages}
-        echo "host=$HOST" >> $GITHUB_OUTPUT
-        echo "Deployment target: $HOST"
-
-  # Build website using reusable workflow (always runs for CI)
   build:
-    needs: config
-    if: github.repository_owner != 'HugoBlox'
-    uses: ./.github/workflows/build.yml
-    secrets: inherit
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0        # lets Hugo compute .Lastmod, etc.
 
-  # Deploy website to GitHub Pages hosting (only if configured)
+      - name: Setup Node.js (optional; used if package.json exists)
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+
+      - name: Setup pnpm (optional; only if package.json exists)
+        if: hashFiles('package.json') != ''
+        uses: pnpm/action-setup@v4
+
+      - name: Install dependencies (optional)
+        run: |
+          if [ -f "package.json" ]; then
+            pnpm install || npm install
+          fi
+
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v3
+        with:
+          hugo-version: ${{ env.WC_HUGO_VERSION }}
+          extended: true
+
+      - name: Cache Hugo & node modules
+        uses: actions/cache@v4
+        with:
+          path: |
+            /tmp/hugo_cache_runner/
+            node_modules/
+            modules/*/node_modules/
+          key: ${{ runner.os }}-hugomod-${{ hashFiles('**/go.mod', '**/package-lock.json', '**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-hugomod-
+
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v5
+
+      - name: Build with Hugo
+        env:
+          HUGO_ENVIRONMENT: production
+        run: |
+          echo "Hugo Cache Dir: $(hugo config | grep cachedir)"
+          hugo --minify --baseURL "${{ steps.pages.outputs.base_url }}/"
+
+      - name: Generate Pagefind search index (only if used)
+        run: |
+          if [ -f "package.json" ] && grep -q "pagefind" package.json; then
+            pnpm dlx pagefind --source "public" || npx pagefind --source "public"
+          elif [ -f "netlify.toml" ] && grep -q "pagefind" netlify.toml; then
+            pnpm dlx pagefind --source "public" || npx pagefind --source "public"
+          fi
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./public
+
   deploy:
-    needs: [config, build]
-    if: needs.config.outputs.deploy-host == 'github-pages'
-    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
-    permissions:
-      pages: write # to deploy to Pages
-      id-token: write # to verify the deployment originates from an appropriate source
-    # Deploy to the github-pages environment
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+    needs: build
     steps:
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v4
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+
