--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -4,9 +4,9 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 # Website name (set in params.yaml under hugoblox.branding.name)
-title: ''
-# Website URL
-baseURL: 'https://example.com/'
+title: Academic CV Pro Hugo Theme # Website name
+baseURL: 'https://example.com/' # Website URL
+
 
 ############################
 ## LANGUAGE
@@ -17,15 +17,6 @@ hasCJKLanguage: false
 defaultContentLanguageInSubdir: false
 removePathAccents: true
 
-############################
-## PAGE OPTIONS
-############################
-
-cascade:
-  - _target:
-      path: /slides/**
-      kind: page
-    outputs: [HTML, present]
 
 ############################
 ## ADVANCED
@@ -40,16 +31,17 @@ pagination:
 enableEmoji: true
 enableRobotsTXT: true
 footnotereturnlinkcontents: <sup>^</sup>
-ignoreFiles: [".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "_cache$"]
+ignoreFiles: [\.ipynb$, .ipynb_checkpoints$, \.Rmd$, \.Rmarkdown$, _cache$]
+permalinks:
+  authors: '/author/:slug/'
 disableAliases: true
 outputs:
-  home: [HTML, RSS, headers, redirects, backlinks]
+  home: [HTML, RSS, headers, redirects]
   section: [HTML, RSS]
 imaging:
   resampleFilter: lanczos
-  quality: 90
+  quality: 80
   anchor: smart
-  hint: picture
 timeout: 600000
 taxonomies:
   author: authors
