--- a/config/_default/module.yaml
+++ b/config/_default/module.yaml
@@ -4,18 +4,21 @@
 ## Docs: https://gohugo.io/hugo-modules/
 ############################
 
+noVendor: "github.com/HugoBlox/hugo-blox-builder/**"
+private: "github.com/HugoBlox/all-access/blox-all-access"
+
 imports:
-  - path: github.com/HugoBlox/kit/modules/integrations/netlify
-  - path: github.com/HugoBlox/kit/modules/blox
-  - path: github.com/HugoBlox/kit/modules/slides
+  - path: github.com/HugoBlox/hugo-blox-builder/modules/blox-plugin-netlify
+  - path: github.com/HugoBlox/hugo-blox-builder/modules/blox-tailwind
+  - path: github.com/HugoBlox/all-access/blox-all-access
 
 # Install any Hugo Blox within the `hugo-blox/blox/` folder
 mounts:
   - source: hugo-blox/blox/community
-    target: layouts/_partials/blox/community/
+    target: layouts/partials/blox/community/
     includeFiles: '**.html'
   - source: hugo-blox/blox/all-access
-    target: layouts/_partials/blox/
+    target: layouts/partials/blox/
     includeFiles: '**.html'
   - source: hugo-blox/blox
     target: assets/dist/community/blox/
@@ -24,3 +27,4 @@ mounts:
     target: layouts
   - source: assets
     target: assets
+
