--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -1,11 +1,7 @@
-# ══════════════════════════════════════════════════════════════════════════════
-# HUGO BLOX CONFIGURATION
-# Schema: hugoblox.com/schema/v2
-# Tutorial: https://docs.hugoblox.com/tutorial/
+# SITE SETUP
+# Guide: https://docs.hugoblox.com/tutorial/
 # Documentation: https://docs.hugoblox.com/
-# ══════════════════════════════════════════════════════════════════════════════
-hugoblox:
-  schema: "2.0"
+# This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 
   # ────────────────────────────────────────────────────────────────────────────
@@ -95,16 +91,57 @@ hugoblox:
     cta:
       enable: false
       text: ""
-      url: ""
+      URL: ""
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # FOOTER
-  # Site footer
-  # ────────────────────────────────────────────────────────────────────────────
-  footer:
-    language_switcher: true
-    # custom footer text
-    text: ""
+
+# Footer
+<footer aria-labelledby="footer-heading">
+  <span id="footer-heading" class="sr-only">Footer</span>
+
+  <div class="px-4 py-12 mx-auto max-w-7xl sm:px-6 lg:px-16">
+    <div class="xl:grid xl:grid-cols-3 xl:gap-8">
+      <div class="text-white xl:col-span-1">
+        <a class="text-lg font-bold tracking-tighter text-primary-600 dark:text-primary-200 transition duration-500 ease-in-out transform tracking-relaxed lg:pr-8" href="{{site.Home.RelPermalink}}">
+          {{site.Params.footer.content.logo.text | default "" }}
+        </a>
+        <p class="w-1/2 mt-2 text-sm text-gray-500 dark:text-gray-300">{{site.Params.footer.content.tagline | default "" }}</p>
+      </div>
+      <div class="grid grid-cols-1 md:grid-cols-{{site.Params.footer.design.columns | default 4 }} gap-8 mt-12 xl:mt-0 xl:col-span-2">
+
+          {{ $menu := .Site.Menus.footer }}
+          {{ range $index, $menuItem := $menu }}
+          <div>
+            <h3 class="text-sm font-bold tracking-wider text-primary-500 dark:text-primary-300 uppercase">{{ $menuItem.Name }}</h3>
+            <ul role="list" class="mt-4 space-y-2">
+              {{ range $childIndex, $childMenuItem := $menuItem.Children }}
+              {{ $url := .URL | relLangURL }}
+              <li>
+                <a href="{{ $url }}"
+                class="text-base font-normal text-gray-500 hover:text-primary-600 dark:text-gray-300 dark:hover:text-primary-300"
+                   {{ if findRE `^http` .URL }}
+                   target="_blank" rel="noopener"
+                   {{ end }}
+                   >
+                  {{ $childMenuItem.Name }}
+                </a>
+              </li>
+              {{ end }}
+            </ul>
+          </div>
+        {{ end }}
+      </div>
+    </div>
+  </div>
+  <div class="px-4 py-12 mx-auto bg-transparent dark:bg-transparent max-w-7xl sm:px-6 lg:px-16">
+    <div class="flex flex-wrap items-baseline">
+      <span class="mt-2 text-sm font-light text-gray-500 dark:text-gray-300">
+        {{/* Display copyright license. */}}
+        {{ partial "site_footer_license" . }}
+      </span>
+    </div>
+  </div>
+</footer>
+
 
   # ────────────────────────────────────────────────────────────────────────────
   # COPYRIGHT
@@ -221,16 +258,6 @@ hugoblox:
     yandex: ""
     pinterest: ""
     naver: ""
-
-  # ────────────────────────────────────────────────────────────────────────────
-  # REPOSITORY
-  # Source code repository for "Edit this page" links
-  # ────────────────────────────────────────────────────────────────────────────
-  repository:
-    enable: false
-    url: "" # e.g., https://github.com/username/repo
-    branch: main
-    content_dir: content
 
   # ────────────────────────────────────────────────────────────────────────────
   # LOCALE
