--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,10 +49,10 @@ jobs:
       uses: pnpm/action-setup@v4
 
     - name: Get Hugo Version
-      id: hugo-version
       run: |
-        VERSION=$(grep "hugo_version" hugoblox.yaml | awk '{print $2}' | tr -d "'\""")
-        echo "HUGO_VERSION=$VERSION" >> $GITHUB_ENV
+        VERSION=$(grep -E '^[[:space:]]*hugo_version:' hugoblox.yaml \
+          | awk '{print $2}' | tr -d '"'\'' )
+        echo "HUGO_VERSION=$VERSION" >> "$GITHUB_ENV"
 
     - name: Install dependencies
       run: |
