--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -26,8 +26,8 @@ hugoblox:
 
 # Localization
 locale:
-  date_format: 'Jan 2, 2006'
-  time_format: '3:04 PM'
+  date_format: "Jan 2, 2006"
+  time_format: "3:04 PM"
 
   #Header
   header:
