--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,8 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      HUGO_BLOX_LICENSE: ${{ secrets.HUGO_BLOX_LICENSE }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
