--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,20 +50,17 @@ jobs:
           hugo-version: ${{ env.WC_HUGO_VERSION }}
           extended: true
 
-      # ──────────────────────────────────────────────────────────────
-      # TEMPORARILY DISABLE CACHES FOR A CLEAN BUILD (RUN ONCE)
-      # - name: Cache Hugo & node modules
-      #   uses: actions/cache@v4
-      #   with:
-      #     path: |
-      #       /tmp/hugo_cache_runner/
-      #       node_modules/
-      #       modules/*/node_modules/
-      #     key: ${{ runner.os }}-hugomod-${{ hashFiles('**/go.mod', '**/package-lock.json', '**/pnpm-lock.yaml') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-hugomod-
-      # ──────────────────────────────────────────────────────────────
-
+      - name: Cache Hugo & node modules
+        uses: actions/cache@v4
+        with:
+          path: |
+           /tmp/hugo_cache_runner/
+            node_modules/
+           modules/*/node_modules/
+          key: ${{ runner.os }}-hugomod-${{ hashFiles('**/go.mod', '**/package-lock.json', '**/pnpm-lock.yaml') }}
+          restore-keys: |
+           ${{ runner.os }}-hugomod-
+     
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
