--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -4,7 +4,7 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: "Leah Houseman" # Website name
-baseURL: "https://example.com/" # Website URL
+baseURL: "https://leahhouseman.ca" # Website URL
 
 ############################
 ## LANGUAGE
