--- a/data/authors/avatar.yaml
+++ b/data/authors/avatar.yaml
@@ -5,7 +5,7 @@ name:
   family: "Houseman"
   pronouns: "she/her"
 role: "PhD Student & Programs Officer"
-bio: ""
+bio: "testing bio to see what this does"
 status:
   icon: "👋"
 postnominals:
