--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -1,7 +1,7 @@
 hugoblox:
   schema: "2.0"
   identity:
-    name: Leah Houseman
+    name: Leah Houseman | Sociologist
     type: person
     tagline: PhD Student & Programs Officer | USask
     organization: University of Saskatchewan
