--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -1,6 +1,7 @@
 hugoblox:
   schema: "2.0"
   identity:
+    logo: "assets/media/LH-logo.png"
     name: Leah Houseman
     type: person
     tagline: PhD Student & Programs Officer | USask
