--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -5,6 +5,7 @@
 
 title: "Leah Houseman" # Website name
 baseURL: "https://leahhouseman.ca" # Website URL
+logo: "assets/media/LH-logo.png"
 
 ############################
 ## LANGUAGE
