--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -2,7 +2,7 @@ hugoblox:
   schema: "2.0"
   identity:
     name: Leah Houseman
-    logo: "static/media/logo.png"
+    logo: "static/favicon.png"
     type: person
     tagline: PhD Student & Programs Officer | USask
     organization: University of Saskatchewan
