--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -5,7 +5,7 @@
 
 title: "Leah Houseman" # Website name
 baseURL: "https://leahhouseman.ca" # Website URL
-logo: "static/media/logo.png"
+logo: ""
 
 ############################
 ## LANGUAGE
