--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -8,7 +8,8 @@ hugoblox:
     organization: University of Saskatchewan
     description: Exploring disability, adulthood transitions, and social determinants through data-driven insights and policy-focused analytics.
     pro: 
-      hide_attribution: true
+      hide_attribution: false
+      
   #Theme and layout
   theme:
     mode: system
